# Pytorch

./: pyproject.toml
Neural_Netwok/: neural_network.ipynb
lstm/: lstm.ipynb
rnn/: rnn.ipynb
